--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist"
   },
-  "author": "ryapolov evgeniy",
+  "author": "ryapolov",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.23.0",
